# bunny

./: .bunny.yaml.example  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE.md  README.md  SECURITY.md  bunny  docker-compose.dev.yml  docker-compose.yml
.discord/: env.example
.github/workflows/: ci.yml  docs.yml  release.yml
apps/discord-bridge/: Cargo.toml  discord-bridge.yaml.example
apps/discord-bridge/src/: main.rs  threads.rs
apps/mobile/: README.md  pubspec.yaml
apps/mobile/lib/: firebase_options.dart  main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/server/: Cargo.toml
apps/server/cdp-sidecar/: extract-oauth-code.js  index.js  package-lock.json  package.json  screenshot.js
apps/server/src/: api.rs  approval_service.rs  blocks.rs  browser_ops.rs  cdp_collector.rs  claude.rs  cli.rs  compositor.rs  config_init.rs  discord_bridge.rs  discord_bridge_binary.rs  discord_claude.rs  discord_follow.rs  discord_git.rs  discord_ops.rs  discord_threads.rs  git_identity.rs  integrations_ops.rs  main.rs  middleware.rs  novnc_proxy.rs  preview.rs  prompt.rs  realtime.rs  recovery.rs  secrets_cli.rs  secrets_ops.rs  state.rs  task_runner.rs  terminal_context_watch.rs  terminals.rs  watch.rs  watch_hub.rs  web_ui.rs  webrtc.rs  ws.rs
apps/server/webrtc-sidecar/: browser-stream.js  index.js  package-lock.json  package.json
apps/slack-bridge/: Cargo.toml
apps/slack-bridge/src/: main.rs
apps/teams-bridge/: Cargo.toml
apps/teams-bridge/src/: main.rs
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
config/: bunny.docker.yaml.example  discord-bridge.local.yaml.example
crates/bunny-auth/: Cargo.toml
crates/bunny-auth/src/: db.rs  lib.rs  service.rs  tokens.rs  totp.rs
crates/bunny-blocks/: Cargo.toml
crates/bunny-blocks/src/: lib.rs
crates/bunny-browser/: Cargo.toml
crates/bunny-browser/src/: cdp.rs  lib.rs  manager.rs  stack.rs
crates/bunny-core/: Cargo.toml
crates/bunny-core/src/: config.rs  error.rs  install_root.rs  lib.rs  permissions.rs  redaction.rs  types.rs
crates/bunny-discord/: Cargo.toml
crates/bunny-discord/src/: db.rs  lib.rs  models.rs  risk.rs
crates/bunny-i18n/: Cargo.toml
crates/bunny-i18n/src/: lib.rs
crates/bunny-integrations/: Cargo.toml
crates/bunny-integrations/src/: chat.rs  db.rs  git.rs  lib.rs  registry.rs  tool.rs  types.rs
crates/bunny-integrations/src/providers/: discord.rs  github.rs  gitlab.rs  jira.rs  linear.rs  mod.rs  slack.rs  supabase.rs  teams.rs
crates/bunny-policy/: Cargo.toml
crates/bunny-policy/src/: action.rs  approver.rs  engine.rs  lib.rs  risk.rs  types.rs
crates/bunny-pty/: Cargo.toml
crates/bunny-pty/src/: buffer.rs  lib.rs  locale.rs  manager.rs  protocol.rs  sanitize.rs  scrollback.rs  session.rs  tmux.rs
crates/bunny-push/: Cargo.toml
crates/bunny-push/src/: fcm.rs  lib.rs  types.rs
crates/bunny-relay/: Cargo.toml
crates/bunny-relay/src/: client.rs  lib.rs  supervisor.rs
crates/bunny-secrets/: Cargo.toml
crates/bunny-secrets/src/: error.rs  lib.rs  vault.rs
docs/: README.md  bunny-db.sqldesigner.xml  i18n.md
docs/api/: README.md
docs/architecture/: overview.md  terminals.md
docs/improvements/: novnc-readonly-server-enforcement.md
docs/install/: README.md
docs/integrations/: discord-docker-dev.md  discord.md
docs/mobile/: README.md  push-webrtc.md
docs/security/: README.md
examples/simple-node-app/: package.json  server.js
infra/systemd/: bunny-agent.service
scripts/: build-server.sh  build-web.sh  bunny-wrapper.sh  check-i18n.sh  docker-dev-entrypoint.sh  docker-dev.sh  docker-entrypoint.sh  docker-quickstart.sh  doctor.sh  install-prerequisites.sh  install-release.sh  install-runtime.sh  install.sh  package-release.sh  run-discord-bridge.sh  setup-dev.sh
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: i18n.md  intro.mdx
website/docs/api/: auth.tag.mdx  browser-web-rtc-ice-candidate.StatusCodes.json  browser-web-rtc-ice-candidate.api.mdx  browser.tag.mdx  bunny-api.info.mdx  complete-login-with-totp-or-recovery-code.RequestSchema.json  complete-login-with-totp-or-recovery-code.StatusCodes.json  complete-login-with-totp-or-recovery-code.api.mdx  confirm-mfa-with-first-totp-code-returns-recovery-codes-once.RequestSchema.json  confirm-mfa-with-first-totp-code-returns-recovery-codes-once.StatusCodes.json  confirm-mfa-with-first-totp-code-returns-recovery-codes-once.api.mdx  confirm-voice-action.RequestSchema.json  confirm-voice-action.StatusCodes.json  confirm-voice-action.api.mdx  create-browser-session.RequestSchema.json  create-browser-session.StatusCodes.json  create-browser-session.api.mdx  create-encrypted-vault-owner-only.RequestSchema.json  create-encrypted-vault-owner-only.StatusCodes.json  create-encrypted-vault-owner-only.api.mdx  create-or-update-secret-owner-only.RequestSchema.json  create-or-update-secret-owner-only.StatusCodes.json  create-or-update-secret-owner-only.api.mdx  create-owner-account-first-run-only.RequestSchema.json  create-owner-account-first-run-only.StatusCodes.json  create-owner-account-first-run-only.api.mdx  create-port-preview.RequestSchema.json  create-port-preview.StatusCodes.json  create-port-preview.api.mdx  create-session.RequestSchema.json  create-session.StatusCodes.json  create-session.api.mdx  create-terminal.RequestSchema.json  create-terminal.StatusCodes.json  create-terminal.api.mdx  current-user-includes-locale-en-fr.StatusCodes.json  current-user-includes-locale-en-fr.api.mdx  disable-mfa-recent-auth-totp-code.RequestSchema.json  disable-mfa-recent-auth-totp-code.StatusCodes.json  disable-mfa-recent-auth-totp-code.api.mdx  (+77 more)
website/docs/architecture/: overview.md  terminals.md
website/docs/getting-started/: choose-your-path.md  (+5 more)
website/static/: CNAME
(+201 files in other folders)
