[package]
name = "bunny-discord-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bunny-discord-bridge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bunny-discord = { path = "../../crates/bunny-discord" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
