[package]
name = "bunny-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bunny"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bunny-auth = { path = "../../crates/bunny-auth" }
bunny-i18n = { workspace = true }
bunny-browser = { path = "../../crates/bunny-browser" }
bunny-core = { path = "../../crates/bunny-core" }
bunny-pty = { path = "../../crates/bunny-pty" }
bunny-relay = { path = "../../crates/bunny-relay" }
bunny-secrets = { path = "../../crates/bunny-secrets" }
bunny-push = { path = "../../crates/bunny-push" }
bunny-discord = { path = "../../crates/bunny-discord" }
image = { version = "0.24", default-features = false, features = ["png"] }
font8x8 = "0.3"
rand.workspace = true
urlencoding = "2"
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
cookie.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
time.workspace = true
regex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2.workspace = true
tokio-tungstenite.workspace = true
qrcode.workspace = true
