[package]
name = "bunny-teams-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bunny-teams-bridge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
