[package]
name = "bunny-browser"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bunny-core = { path = "../bunny-core" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
