[package]
name = "bunny-secrets"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }
